# distgard

./: .gitignore  Cargo.toml  crwindows.bat  srwindows.bat
A663250707/: CN2X7C  CN3X7C  CN4X7C  CN5X7C
assets/: bofrag.glsl  bovert.glsl  cloudsfrag.glsl  cloudsvert.glsl  dropvert.glsl  frag.glsl  mfrag.glsl  mvert.glsl  skyfrag.glsl  skyvert.glsl  twodfrag.glsl  twodvert.glsl  vert.glsl  wffrag.glsl
assets/models/: button.gltf  eye.glb  menubutton.gltf  menubuttonbottom.gltf  menubuttonbottomUC.glb  menubuttontop.gltf  menulogo.gltf  rad.glb  radface.glb  radfacebot.glb  radfacetop.glb  skybox.gltf
assets/voxelmodels/: articwillow.vox  awds.vox  beech1.vox  beech2.vox  beech3.vox  cedartree1.vox  cedartree2.vox  eucalyptus1.vox  eucalyptus2.vox  eucalyptus3.vox  figtree1.vox  figtree2.vox  greenalder1.vox  greenalder2.vox  joshuatree1.vox  joshuatree2.vox  joshuatree3.vox  palmtree1.vox  palmtree2.vox  palmtree3.vox  paperbirch1.vox  paperbirch2.vox  paperbirch3.vox  pinetree1.vox  pinetree2.vox  pumpkin.vox  rock2.vox  saguaro1.vox  saguaro2.vox  saguaro3.vox  westernhemlock1.vox  westernhemlock2.vox  westernhemlock3.vox  willow1.vox  willow2.vox  willow3.vox
binaries/client/: Cargo.toml
binaries/client/src/: main.rs
binaries/server/: Cargo.toml
binaries/server/src/: main.rs
core/bevy_replicon_quintet/: Cargo.toml  README.md
core/bevy_replicon_quintet/examples/: simple_box.rs  tic_tac_toe.rs
core/bevy_replicon_quintet/src/: client.rs  lib.rs  server.rs
core/bevy_replicon_quintet/tests/: transport.rs
core/enum-fmt/: Cargo.toml
core/enum-fmt/src/: lib.rs
core/jeffy_quintet/: Cargo.toml
core/jeffy_quintet/docs/: Certificates.md
core/jeffy_quintet/src/: client.rs  lib.rs  server.rs  shared.rs
core/jeffy_quintet/src/client/: certificate.rs  connection.rs
core/jeffy_quintet/src/client/connection/: client_id.rs
core/jeffy_quintet/src/server/: certificate.rs  client_id.rs
core/jeffy_quintet/src/shared/: channels.rs  error.rs
core/jeffy_quintet/src/shared/channels/reliable/: codec.rs  recv.rs  send.rs
core/jeffy_quintet/tests/: certificates.rs  channels.rs  connection.rs
core/jeffy_quintet/tests/utils/: mod.rs
core/talk/: Cargo.toml
core/vault/: Cargo.toml  README.org
core/vault/src/: lib.rs  persist.rs
dgsavesmp/100/: snap.000000000000035B
lib/: Cargo.toml
lib/src/: aabb.rs  audio.rs  blockinfo.rs  blockoverlay.rs  borshnewtypes.rs  camera.rs  chunk.rs  chunkregistry.rs  climates.rs  cmd.rs  collisioncage.rs  cube.rs  currentplanet.rs  database.rs  deltaencode.rs  drops.rs  everis.rs  eyeris.rs  fixtures.rs  game.rs  guisystem.rs  hud.rs  keybinds.rs  levelsaver.rs  lib.rs  macros.rs  menu3d.rs  model.rs  modelentity.rs  monsters.rs  network.rs  newclient.rs  newserver.rs  packedvertex.rs  planetinfo.rs  rad.rs  raycast.rs  recipes.rs  rlencode.rs  selectcube.rs  (+11 more)
lib/src/specialblocks/: awds.rs  chest.rs  conveyor.rs  crafttable.rs  door.rs  fence.rs  jackolantern.rs  ladder.rs  mod.rs  tallgrass.rs  torch.rs
modelprojects/: awds.blend  conveyor.blend  exportscript.txt  eye.blend  fence.blend  fence.blend1  jackolantern.blend  menu buttons.blend  menu buttons.blend1  rad.blend  rad.blend1
