[workspace]
members = [
    "lib",
    "binaries/server",
    "binaries/client",
    "core/vault",
    "core/talk",
    "core/enum-fmt",
]

[profile.release]
opt-level = 2  # Maximum optimization level
debug = true   # Includes debug information even in release builds

[profile.deploy]
inherits = "release"
lto = true
opt-level = 3
codegen-units = 1
