[workspace]
resolver = "2"
members = [
    "lib",
    "binaries/server",
    "binaries/client",
    "core/vault",
    "core/talk",
    "core/enum-fmt",
    "core/jeffy_quintet",
    "core/bevy_replicon_quintet",
]

[profile.release]
opt-level = 2  # Maximum optimization level
debug = true   # Includes debug information even in release builds

[profile.release.package.voxelland]
opt-level = 3       # Highest level of optimization
# lto = true          # Enable Link Time Optimization
# panic = 'abort'     # Abort on panic, which can reduce binary size and slightly increase performance
# codegen-units = 1   # This may increase compilation time but can improve runtime performance

[profile.release.package.voxelland-client]
opt-level = 3  # Maximum optimization level
# lto = true     # Enables Link Time Optimization
debug = true   # Includes debug information even in release builds
codegen-units = 1   # This may increase compilation time but can improve runtime performance

[profile.release.package.voxelland-server]
opt-level = 3       # Highest level of optimization
# lto = true          # Enable Link Time Optimization
# panic = 'abort'     # Abort on panic, which can reduce binary size and slightly increase performance
codegen-units = 1   # This may increase compilation time but can improve runtime performance

[profile.deploy]
inherits = "release"
lto = true
opt-level = 3
codegen-units = 1
