[package]
name = "voxelland-client"
version = "0.1.0"
edition = "2021"
resolver = "2"

[features]
steam = ["voxelland/steam"]
localpath = ["voxelland/localpath"]

[dependencies]
voxelland = { path = "../../lib", features = ["audio", "glfw", "localpath"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
vox-format = "0.1.0"
no_deadlocks = "1.3.2"
steamworks = "0.11.0"
glfw = "0.55.0"
tracing-appender = "0.2.3"
parking_lot = "0.12.3"
